# egui_viewer_for_esp32osc

./: Cargo.toml  README.md
src/: frame_history.rs  main copy.rs  main.rs
